[gd_scene load_steps=2 format=3 uid="uid://mki2vu2uiv40"]

[ext_resource type="Script" path="res://src/entities/ingredient_spawner/ingredient_spawner.gd" id="1_u1jct"]

[node name="IngredientSpawner" type="Node2D"]
script = ExtResource("1_u1jct")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
